force-app/main/default/objects/Audit__c/fields/AuditName__c.field-meta.xml
<CustomField>
    <fullName>AuditName__c</fullName>
    <label>Audit Name</label>
    <type>TextArea</type>
</CustomField>