force-app/main/default/objects/Audit__c/fields/AuditScopeCompanyClass__c.field-meta.xml
<CustomField>
    <fullName>AuditScopeCompanyClass__c</fullName>
    <label>Audit Scope Company Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AuditScopeCompanyClass</valueSetName>
    </valueSet>
</CustomField>