force-app/main/default/objects/Audit__c/fields/AuditType__c.field-meta.xml
<CustomField>
    <fullName>AuditType__c</fullName>
    <label>Audit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AuditType</valueSetName>
    </valueSet>
</CustomField>