force-app/main/default/objects/Audit__c/fields/DiecrepancyThreshold__c.field-meta.xml
<CustomField>
    <fullName>DiecrepancyThreshold__c</fullName>
    <label>Discrepancy Tolerance Threshold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DiecrepancyThreshold</valueSetName>
    </valueSet>
</CustomField>