force-app/main/default/objects/Audit__c/fields/InventoryPhysicalCountType__c.field-meta.xml
<CustomField>
    <fullName>InventoryPhysicalCountType__c</fullName>
    <label>Inventory Physical Counting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InventoryPhysicalCountType</valueSetName>
    </valueSet>
</CustomField>