force-app/main/default/objects/Audit__c/fields/NegativePercentageTolerance__c.field-meta.xml
<CustomField>
    <fullName>NegativePercentageTolerance__c</fullName>
    <label>Negative Adjustment Percentage Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>