force-app/main/default/objects/Audit__c/fields/NumOfLocationCounted__c.field-meta.xml
<CustomField>
    <fullName>NumOfLocationCounted__c</fullName>
    <label>Number of Location Counted</label>
    <summaryFilterItems>
        <field>AuditLoation__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>AuditLoation__c.AuditID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>