force-app/main/default/objects/Audit__c/fields/ParentAuditID__c.field-meta.xml
<CustomField>
    <fullName>ParentAuditID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Audit ID</label>
    <referenceTo>Audit__c</referenceTo>
    <relationshipLabel>CHILD AUDIT</relationshipLabel>
    <relationshipName>ParentAudit</relationshipName>
    <type>Lookup</type>
</CustomField>