force-app/main/default/objects/Audit__c/fields/PhysicalCountMethod__c.field-meta.xml
<CustomField>
    <fullName>PhysicalCountMethod__c</fullName>
    <label>Physical Count Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhysicalCountMethod</valueSetName>
    </valueSet>
</CustomField>