force-app/main/default/objects/Audit__c/fields/ScheduleStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduleStartDateTime__c</fullName>
    <label>Schedule Start Date/Time</label>
    <type>DateTime</type>
</CustomField>