force-app/main/default/objects/Audit__c/fields/ScopeFacilityID__c.field-meta.xml
<CustomField>
    <fullName>ScopeFacilityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope Facility ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>AUDIT</relationshipLabel>
    <relationshipName>ScopeFacilityID</relationshipName>
    <type>Lookup</type>
</CustomField>