force-app/main/default/objects/Audit__c/fields/ValueToleranceCurrency__c.field-meta.xml
<CustomField>
    <fullName>ValueToleranceCurrency__c</fullName>
    <label>Adjustment Value Tolerance Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>