force-app/main/default/objects/Audit__c/recordTypes/InventoryCountargo.recordType-meta.xml
<RecordType>
    <fullName>InventoryCountargo</fullName>
    <active>true</active>
    <description>Conduct inventory check for specific cargos.</description>
    <label>Inventory Count base on Cargo</label>
</RecordType>