force-app/main/default/objects/Audit__c/recordTypes/InventoryCountbyCompany.recordType-meta.xml
<RecordType>
    <fullName>InventoryCountbyCompany</fullName>
    <active>true</active>
    <description>Conduct inventory check for all products related with the scope company.</description>
    <label>Inventory Count base on Scope Company</label>
</RecordType>