force-app/main/default/objects/Audit__c/recordTypes/InventoryCountbyLocation.recordType-meta.xml
<RecordType>
    <fullName>InventoryCountbyLocation</fullName>
    <active>true</active>
    <description>Conduct inventory check for all products in one location.</description>
    <label>Inventory Count base on Locator</label>
</RecordType>