force-app/main/default/objects/Audit__c/recordTypes/InventoryCountByProduct.recordType-meta.xml
<RecordType>
    <fullName>InventoryCountByProduct</fullName>
    <active>true</active>
    <description>Conduct inventory check for 1 product.</description>
    <label>Inventory Count base on Product</label>
</RecordType>