force-app/main/default/objects/Audit__c/recordTypes/PerformanceAudit.recordType-meta.xml
<RecordType>
    <fullName>PerformanceAudit</fullName>
    <active>true</active>
    <description>Audit for process performance and compliance</description>
    <label>Performance Audit</label>
</RecordType>