force-app/main/default/objects/Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AuditName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>AuditType__c</columns>
    <columns>Status__c</columns>
    <columns>ScopeFacilityID__c</columns>
    <columns>ScopeCompany__c</columns>
    <columns>Department__c</columns>
    <columns>InventoryPhysicalCountType__c</columns>
    <columns>PhysicalCountMethod__c</columns>
    <columns>DiecrepancyThreshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>